# transpilled-rs

./: .gitignore  Cargo.toml  build.rs
clibs/: LICENSE  decode.c
clibs/farmdec/src/: farmdec.h
clibs/rellume/: cpustruct-aarch64.inc
clibs/rellume/src/: callconv.cc  cpustruct-aarch64-private.inc  function-info.h  function.cc  instr.h  regfile.cc  regfile.h  rellume.cc  rellume.h
clibs/rellume/src/a64/: lifter-private.h  main.cc  simd.cc
libs/a2ir/: Cargo.toml
libs/a2ir/src/: aarch64_reader.rs  lib.rs
libs/nx-utils/: Cargo.toml
libs/nx-utils/src/: lib.rs
src/: fast_arm_decoder_bindings.rs  main.rs  rellume_bindings.rs
test/: hello-world.nro
