[package]
name = "transpilled-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
llvm-sys = "160.0.2"
libc = "0.2.144"
nx-utils = { git = "https://github.com/tr-nx/nx-utils.git" }

[build-dependencies]
cc = "1.0.79"
bindgen = "0.65.1"
